--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,6 @@ test = ["Test", "Random","FFTW"]
 
 [compat]
 julia = "0.7, 1.0"
-LinearOperators = "0.6"
+LinearOperators = "0.5, 0.6"
 FFTW = "1.0"
 Wavelets = "0.9"
