--- a/Project.toml
+++ b/Project.toml
@@ -23,4 +23,4 @@ test = ["Test", "Random","FFTW"]
 julia = "0.7, 1.0"
 LinearOperators = "0.5, 0.6"
 FFTW = "1.0"
-Wavelets = "0.9"
+Wavelets = "0.8, 0.9"
