--- a/Project.toml
+++ b/Project.toml
@@ -22,5 +22,5 @@ test = ["Test", "Random","FFTW"]
 [compat]
 julia = "0.7, 1.0"
 LinearOperators = "0.5, 0.6"
-FFTW = "1.0"
+FFTW = "0.2, 1.0"
 Wavelets = "0.8, 0.9"
