--- a/Project.toml
+++ b/Project.toml
@@ -1,26 +1,26 @@
 name = "SparsityOperators"
 uuid = "a5ff1dd3-4e0a-50db-9022-6d011c1d5846"
 authors = ["Tobias Knopp <tobias@knoppweb.de>"]
-version = "0.1.2"
+version = "0.1.3"
 
 [deps]
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearOperators = "5c8ed15e-5a4c-59e4-a42b-c7e8811fb125"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Wavelets = "29a6e085-ba6d-5f35-a997-948ac2efa89a"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 
 [targets]
-test = ["Test", "Random","FFTW"]
+test = ["Test"]
 
 [compat]
 julia = "0.7, 1.0"
 LinearOperators = "0.5, 0.6"
 FFTW = "0.2, 1.0"
 Wavelets = "0.8, 0.9"
+Reexport = "0.2"
