--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "SparsityOperators"
 uuid = "a5ff1dd3-4e0a-50db-9022-6d011c1d5846"
 authors = ["Tobias Knopp <tobias@knoppweb.de>"]
-version = "0.1.4"
+version = "0.1.5"
 
 [deps]
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
@@ -20,7 +20,7 @@ test = ["Test"]
 
 [compat]
 julia = "0.7, 1.0"
-LinearOperators = "0.5, 0.6"
+LinearOperators = "1.0"
 FFTW = "0.2, 1.0"
 Wavelets = "0.8, 0.9"
 Reexport = "0.2"
