--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,8 @@ os:
   - linux
   - osx
 julia:
-  - 0.7
   - 1.0
-  - 1.1
+  - 1.3
   - nightly
 notifications:
   email: false
@@ -16,9 +15,9 @@ git:
 
 ## uncomment the following lines to allow failures on nightly julia
 ## (tests will run but not make your overall status red)
-#matrix:
-#  allow_failures:
-#  - julia: nightly
+matrix:
+  allow_failures:
+  - julia: nightly
 
 ## uncomment following lines to deploy documentation
 # jobs:
