--- a/Project.toml
+++ b/Project.toml
@@ -20,7 +20,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 test = ["Test"]
 
 [compat]
-julia = "0.7, 1.0"
+julia = "1.3"
 LinearOperators = "1.0"
 FFTW = "0.2, 1.0"
 Wavelets = "0.8, 0.9"
