--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,10 @@
 name = "SparsityOperators"
 uuid = "a5ff1dd3-4e0a-50db-9022-6d011c1d5846"
 authors = ["Tobias Knopp <tobias@knoppweb.de>"]
-version = "0.4.5"
+version = "0.4.6"
 
 [deps]
-CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+#CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearOperators = "5c8ed15e-5a4c-59e4-a42b-c7e8811fb125"
@@ -14,7 +14,7 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Wavelets = "29a6e085-ba6d-5f35-a997-948ac2efa89a"
 
 [compat]
-CUDA = "1.3.3, 2.3, 3.1"
+#CUDA = "1.3.3, 2.3, 3.1"
 FFTW = "0.2, 1.0"
 LinearOperators = "2.3.3"
 Reexport = "0.2, 1.0"
